objects/SFRelease__Org__c.object
<CustomObject>
    <fields>
        <fullName>SFRelease__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Async_Test_Job_Id__c</fullName>
        <label>Async Test Job Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Authentication_Failure_Reason__c</fullName>
        <description>If Authentication is failed, the fail reason will be displayed here.</description>
        <inlineHelpText>If Authentication is failed, the fail reason will be displayed here.</inlineHelpText>
        <label>Authentication Failure Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Current_Time__c</fullName>
        <formula>NOW()</formula>
        <label>Current Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Desired_Timezone__c</fullName>
        <label>Desired Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia/Kolkata</fullName>
                </value>
                <value>
                    <fullName>Europe/Moscow</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>Europe/London</fullName>
                </value>
                <value>
                    <fullName>Europe/Vatican</fullName>
                </value>
                <value>
                    <fullName>Europe/Stockholm</fullName>
                </value>
                <value>
                    <fullName>Europe/Prague</fullName>
                </value>
                <value>
                    <fullName>Europe/Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Bahrain</fullName>
                </value>
                <value>
                    <fullName>Asia/Dubai</fullName>
                </value>
                <value>
                    <fullName>Asia/Karachi</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Australia/Melbourne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFRelease__Domain_URL__c</fullName>
        <label>Domain URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Email_Id_s__c</fullName>
        <label>Email Id(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFRelease__IsTestRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Test class to avoid recurring flow</description>
        <inlineHelpText>Used for Test class to avoid recurring flow</inlineHelpText>
        <label>IsTestRunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFRelease__Last_Run__c</fullName>
        <inlineHelpText>To check last time the callout hit to Target Org to get Status</inlineHelpText>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Next_Run__c</fullName>
        <inlineHelpText>The time that callout will happen to get the Status from Target Org</inlineHelpText>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Next_Schedule_Based_on_TimeZone__c</fullName>
        <label>Next Schedule Based on TimeZone</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Next_Schedule_On__c</fullName>
        <label>Next Schedule On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org_Type__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFRelease__Overall_Code_Coverage__c</fullName>
        <label>Overall Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFRelease__Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Production_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SFRelease__Org__c.SFRelease__Org_Type__c</field>
                <operation>equals</operation>
                <value>Production</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFRelease__Org__c</referenceTo>
        <relationshipLabel>Orgs</relationshipLabel>
        <relationshipName>Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFRelease__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Sandbox_Last_Login__c</fullName>
        <label>Sandbox Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFRelease__Security_Token__c</fullName>
        <label>Security Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Status_Check_Frequency__c</fullName>
        <label>Status Check Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFRelease__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <default>true</default>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFRelease__Test_Run_Type__c</fullName>
        <label>Test Run Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Run Local Tests</fullName>
                    <default>true</default>
                    <label>Run Local Tests</label>
                </value>
                <value>
                    <fullName>Run All Tests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFRelease__Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Org</label>
    <listViews>
        <fullName>SFRelease__All</fullName>
        <columns>NAME</columns>
        <columns>SFRelease__Org_Type__c</columns>
        <columns>SFRelease__Production_Org__c</columns>
        <columns>SFRelease__Last_Run__c</columns>
        <columns>SFRelease__Next_Run__c</columns>
        <columns>SFRelease__Authentication_Failure_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <recordTypes>
        <fullName>SFRelease__Production</fullName>
        <active>true</active>
        <label>Production</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFRelease__Sandbox</fullName>
        <active>true</active>
        <label>Sandbox</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SFRelease__Name_Charecters_Should_be_Less_Than_10</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name) &gt; 10</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Org Name Should Not be more than 10 Characters.</errorMessage>
    </validationRules>
</CustomObject>